[package]
name = "FlareSync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15.0"
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"