[package]
name = "flaresync"
version = "2.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
